--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">UMTZ</string>
+    <string name="app_name">Antre Deux Vins</string>
     <string name="infrastructure_textview_name">Server Name</string>
     <string name="infrastructure_textview_ip">Server IP</string>
     <string name="server_textview_name">Server Name</string>
@@ -21,5 +21,26 @@
     <string name="ok">Oui</string>
     <string name="cancel">Non</string>
     <string name="server_textview_status">Server Status</string>
+    <string name="title_activity_login">Register</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="register_edittext_mail">Mail</string>
+    <string name="register_edittext_name">Name</string>
+    <string name="register_edittext_password">Password</string>
+    <string name="register_edittext_confirmpassword">Confirm Password</string>
+    <string name="register_valid_form">Register</string>
+    <string name="login_valid_form">Login</string>
+    <string name="title_app">Antre Deux Vins</string>
 
 </resources>
