--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,16 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="res_list_view_single_name">Wine Name</string>
+    <string name="nom_du_vin">Nom du vin</string>
+    <string name="viande">Viande</string>
+    <string name="fromage">fromage</string>
+    <string name="crustace">crustace</string>
+    <string name="meilleur_avec">Meilleur avec :</string>
+    <string name="millesime">Millesime</string>
+    <string name="volume">Volume</string>
+    <string name="type">Type</string>
+    <string name="rouge">Rouge</string>
+    <string name="blanc">Blanc</string>
+    <string name="ros">Rosé</string>
 
 </resources>
