--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,73 +1,62 @@
 <resources>
     <string name="app_name">Antre Deux Vins</string>
-    <string name="infrastructure_textview_name">Server Name</string>
-    <string name="infrastructure_textview_ip">Server IP</string>
-    <string name="server_textview_name">Server Name</string>
-    <string name="server_textview_ip">Server ip</string>
-    <string name="server_button_start">Start</string>
-    <string name="server_button_stop">Stop</string>
-    <string name="server_button_restart">Restart</string>
-    <string name="login_edittext_mail">Mail</string>
-    <string name="login_edittext_password">Password</string>
-    <string name="login_button_connexion">Connexion</string>
-    <string name="txt_Show">Progressing Please wait...</string>
-    <string name="server_name">Server Name</string>
-    <string name="server_ip">Server IP</string>
-    <string name="server_name_detail">Server Name</string>
-    <string name="server_ip_detail">Server ip</string>
-    <string name="loggin_textview_link">Pas de compte ? Inscrivez-vous</string>
-    <string name="dialog_message">Voulez-vous vous deconnecter ?</string>
-    <string name="dialog_title">Deconnexion</string>
-    <string name="ok">Oui</string>
-    <string name="cancel">Non</string>
-    <string name="server_textview_status">Server Status</string>
-    <string name="title_activity_login">Register</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-    <string name="register_edittext_mail">Mail</string>
-    <string name="register_edittext_name">Name</string>
-    <string name="register_edittext_password">Password</string>
-    <string name="register_edittext_confirmpassword">Confirm Password</string>
-    <string name="register_valid_form">Register</string>
-    <string name="login_valid_form">Login</string>
-    <string name="title_app">Antre Deux Vins</string>
-    <string name="login_error_messageMail">Adresse mail non valide</string>
+    <!-- LOGIN FIELDS -->
+    <string name="login_mail">Mail</string>
+    <string name="login_password">Password</string>
+    <string name="login_btn_connexion">Connexion</string>
+    <string name="login_link_register">You don\'t have an account? &lt;u>Register!&lt;/u></string>
+    <string name="login_error_invalid_mail">Invalid mail address</string>
+    <string name="login_error_empty_fields">Please fill the fields</string>
+    <string name="login_error_incorrect_mail_or_password">Mail or password are incorrect</string>
+    <!-- REGISTER FIELDS -->
+    <string name="register_title_activity">Register</string>
+    <string name="register_hint_mail">Mail</string>
+    <string name="register_hint_name">Name</string>
+    <string name="register_hint_password">Password</string>
+    <string name="register_hint_confirm_password">Confirm password</string>
+    <string name="register_btn_register_and_login">Register and login</string>
+    <string name="register_link_login">You already have an account ? &lt;u>Login!&lt;/u></string>
+    <string name="register_error_password_same">Password must be the same</string>
+    <string name="register_error_account_exist">This mail is already use</string>
+    <!-- CELLAR FIELDS -->
+    <string name="cellar_activity_name">My Wine Cellar</string>
+    <string name="cellar_hint_search">Search</string>
+    <string name="cellar_single_delete">DELETE</string>
+    <string name="cellar_single_wine_name">Wine Name</string>
+    <string name="cellar_single_wine_foods">Wine foods</string>
+    <string name="cellar_remove_text"> remove from cellar !</string>
+    <string name="cellar_remove_undo">UNDO</string>
+    <!-- ADDWINE FIELDS -->
+    <string name="addwine_wine_name">Wine name</string>
+    <string name="addwine_wine_millesime">Millesime</string>
+    <string name="addwine_wine_volume">Volume</string>
+    <string name="addwine_wine_type">Type</string>
+    <string name="addwine_wine_color_red">Red</string>
+    <string name="addwine_wine_color_white">White</string>
+    <string name="addwine_wine_color_rose">Rosé</string>
+    <string name="addwine_wine_food_meat">Meat</string>
+    <string name="addwine_wine_food_cheese">Cheese</string>
+    <string name="addwine_wine_food_crustacean">Crustacean</string>
+    <string name="addwine_wine_advice">Best taste with</string>
+    <string name="addwine_error_food_choice">Please choose at least one food</string>
+    <string name="addwine_error_type_wine">Choose a type of wine</string>
+    <string name="addwine_error_millesime_year">fill a date between 1990 and 2018</string>
+    <string name="addwine_dialog_add">ADD</string>
+    <!-- WINE FIELDS -->
+    <string name="wine_btn_update">UPDATE</string>
+    <string name="wine_btn_accept">Accept</string>
+    <string name="wine_btn_cancel">Cancel</string>
+    <!-- USER FIELDS -->
+    <string name="user_hello">Hello :</string>
+    <string name="user_mail">Mail :</string>
+    <string name="user_btn_disconnect">Disconnect</string>
+    <string name="user_dialog_message">Are you sure ?</string>
+    <string name="user_dialog_title">Disconnect</string>
+    <string name="user_dialog_ok">OK</string>
+    <string name="user_dialog_cancel">CANCEL</string>
+    <!-- TASK SERVICE -->
+    <string name="taskservice_loading">Loading ...</string>
+    <!-- USELESS -->
     <string name="title_activity_cellar">CellarActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="res_list_view_single_name">Wine Name</string>
-    <string name="nom_du_vin">Nom du vin</string>
-    <string name="viande">Viande</string>
-    <string name="fromage">fromage</string>
-    <string name="crustace">crustace</string>
-    <string name="meilleur_avec">Meilleur avec :</string>
-    <string name="millesime">Millesime</string>
-    <string name="volume">Volume</string>
-    <string name="type">Type</string>
-    <string name="rouge">Rouge</string>
-    <string name="blanc">Blanc</string>
-    <string name="ros">Rosé</string>
-    <string name="inscrivez_vous">Vous n\'avez pas de comptes ? &lt;u>Inscrivez-vous !&lt;/u></string>
-    <string name="deconnecter">Disconnect</string>
-    <string name="Bonjour">Hello :</string>
-    <string name="email">mail :</string>
-
-
-    <string name="action_settings">Settings</string>
-    <string name="my_cart">My Cart</string>
-    <string name="delete">DELETE</string>
-
 
 </resources>
